--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 Flask==1.1.2
+gunicorn==20.1.0
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
@@ -9,4 +10,4 @@ MarkupSafe==1.1.1
 requests==2.25.1
 urllib3==1.26.4
 Werkzeug==1.0.1
-python3-saml==1.10.1
+python3-saml==1.14.0
