App working in Docker with https redirect

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     ports:
       - 8080:8080
     volumes:
-      - ./orcidflask/saml/certs:/opt/orcid_integration/orcidflask/saml/certs
-      - ./orcidflask/saml/settings.json:/opt/orcid_integration/orcidflask/saml/settings.json
-      - ./config.py:/opt/orcid_integration/config.py
+      #- ./orcidflask/saml/certs:/opt/orcid_integration/orcidflask/saml/certs
+      #- ./orcidflask/saml/settings.json:/opt/orcid_integration/orcidflask/saml/settings.json
+      #- ./config.py:/opt/orcid_integration/config.py
+      - .:/opt/orcid_integration
