--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,27 @@
 version: "2"
 services:
+  db:
+    image: postgres
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB} 
+    volumes:
+      - ./data:/var/lib/postgresql/data
   flask-app:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
       - 8080:8080
+    links:
+      - db:db
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_DB_HOST=${POSTGRES_DB_HOST}
+      - POSTGRES_PORT=${POSTGRES_PORT}
     volumes:
       #- ./orcidflask/saml/certs:/opt/orcid_integration/orcidflask/saml/certs
       #- ./orcidflask/saml/settings.json:/opt/orcid_integration/orcidflask/saml/settings.json
