--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
+defusedxml==0.6.0
 Flask==1.1.2
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
 gunicorn==20.1.0
 idna==2.10
+isodate==0.6.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
+lxml==4.6.3
 MarkupSafe==1.1.1
+psycopg2-binary==2.9.3
+python3-saml==1.14.0
 requests==2.25.1
+six==1.15.0
+SQLAlchemy==1.4.40
 urllib3==1.26.4
 Werkzeug==1.0.1
-python3-saml==1.14.0
+xmlsec==1.3.9
