--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_DB_HOST=${POSTGRES_DB_HOST}
       - POSTGRES_PORT=${POSTGRES_PORT}
+      - DB_ENCRYPTION_FILE=${DB_ENCRYPTION_FILE}
     volumes:
       #- ./orcidflask/saml/certs:/opt/orcid_integration/orcidflask/saml/certs
       #- ./orcidflask/saml/settings.json:/opt/orcid_integration/orcidflask/saml/settings.json
