--- a/example.env
+++ b/example.env
@@ -3,4 +3,4 @@ POSTGRES_PASSWORD=orcidpass
 POSTGRES_DB=orcidig
 POSTGRES_DB_HOST=db
 POSTGRES_PORT=5432
-DB_ENCRYPTION_FILE=./db-encrypt.key
+DB_ENCRYPTION_FILE=/opt/orcid_integration/orcidflask/db/db-encrypt.key
