Moved variable to .env

--- a/example.env
+++ b/example.env
@@ -4,3 +4,5 @@ POSTGRES_DB=orcidig
 POSTGRES_DB_HOST=db
 POSTGRES_PORT=5432
 DB_ENCRYPTION_FILE=/opt/orcid_integration/orcidflask/db/db-encrypt.key
+# Values are sandbox or prod
+ORCID_SERVER=sandbox
