--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 cryptography==38.0.1
 Flask==2.3.3
 Flask-SQLAlchemy==2.5.1
+Flask-Migrate==4.0.7
 gunicorn==20.1.0
 psycopg2-binary==2.9.3
 python3-saml==1.16.0
