--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask==2.3.3
 Flask-SQLAlchemy==2.5.1
 Flask-Migrate==4.0.7
 gunicorn==20.1.0
+Jinja2==3.1.4
 psycopg2-binary==2.9.3
 python3-saml==1.16.0
 requests==2.25.1
