--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ gunicorn==20.1.0
 Jinja2==3.1.4
 psycopg2-binary==2.9.3
 python3-saml==1.16.0
-requests==2.25.1
+requests==2.26.0
+requests-mock==1.12.1
 six==1.15.0
 SQLAlchemy==1.4.40
 lxml==5.2.2
