--- a/example.env
+++ b/example.env
@@ -6,3 +6,4 @@ POSTGRES_PORT=5432
 DB_ENCRYPTION_FILE=/opt/orcid_integration/orcidflask/db/db-encrypt.key
 # Values are sandbox or prod
 ORCID_SERVER=sandbox
+VIRTUAL_HOST=
