--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,15 @@ Flask-SQLAlchemy==2.5.1
 Flask-Migrate==4.0.7
 gunicorn==20.1.0
 Jinja2==3.1.4
+lark==1.1.9
 psycopg2-binary==2.9.3
 python3-saml==1.16.0
-requests==2.26.0
+regex-2024.7.24
+requests==2.31.0
 requests-mock==1.12.1
 six==1.15.0
 SQLAlchemy==1.4.40
 lxml==5.2.2
 pandas==2.2.2
 pytest==8.2.2
+xsdata==24.7
